ログイン中user以外のworkspaceを見られないようにする

--- a/public/500.html
+++ b/public/500.html
@@ -32,7 +32,7 @@
     <div class="error__message">
       <h1 class="error__title">ページを表示できませんでした</h1>
       <p class="error__status">500: Internal Server Error</p>
-      <p class="error__desc">このページは一時的にアクセスができない状況にあります。時間が経ってから再度アクセスしてください</p>
+      <p class="error__desc">このページは一時的にアクセスができない状況にあります。<br>時間が経ってから再度アクセスしてください</p>
       <img class="error__image" src="/images/cat_disappointed.svg">
     </div>
   </div>
